# igniteircd

./: .gitignore  Makefile.in  README.md  configure
adns/: .depend  Makefile.in  README.ircd  adns.h  check.c  dlist.h  event.c  general.c  internal.h  parse.c  poll.c  query.c  reply.c  setup.c  transmit.c  tvarith.h  types.c
autoconf/: acconfig.h  config.guess  config.sub  configure.in  install-sh
docs/: Authors  Capabilities  Changelog  ConnectFlags  INSTALL  IgniteOpers  Index  License  Operators  RFC1459  TS5  TSora  ToDo  Tuning  ignite.conf.sample  ircd.8  opers.help
include/: blalloc.h  channel.h  class.h  client.h  common.h  config.h  config.h.dist  dbuf.h  dline_conf.h  fdlist.h  fileio.h  flud.h  hash.h  irc_string.h  ircd.h  ircd_defs.h  ircd_signal.h  list.h  listener.h  m_commands.h  m_gline.h  m_info.h  m_kline.h  motd.h  msg.h  mtrie_conf.h  numeric.h  packet.h  parse.h  res.h  restart.h  s_auth.h  s_bsd.h  s_conf.h  s_debug.h  s_log.h  s_misc.h  s_serv.h  s_stats.h  s_user.h  (+9 more)
src/: .depend  Makefile.in  adns.c  blalloc.c  channel.c  class.c  client.c  dbuf.c  dline_conf.c  fdlist.c  fileio.c  flud.c  hash.c  irc_string.c  ircd.c  ircd_signal.c  list.c  listener.c  m_admin.c  m_away.c  m_capab.c  m_close.c  m_connect.c  m_die.c  m_error.c  m_fnick.c  m_gline.c  m_help.c  m_htm.c  m_info.c  m_ison.c  m_kill.c  m_kline.c  m_links.c  m_list.c  m_locops.c  m_ltrace.c  m_lusers.c  m_message.c  m_mode.c  (+45 more)
tools/: Makefile.in  README  fixklines.c  install_ircd  ircd_start.c  klineParse.c  mkconf  mkpasswd.c  start_ircd.c  untabify  viconf.c
